// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/generateJunctionSeed should return single seed data for junction-table model 1`] = `
Object {
  "articleId": 52697,
  "id": 48239,
  "tagId": 82337,
}
`;

exports[`utils/generateJunctionSeeds should return multiple seed data for junction-table model 1`] = `
Array [
  Object {
    "articleId": 52697,
    "id": 48239,
    "tagId": 82337,
  },
  Object {
    "articleId": 14400,
    "id": 52023,
    "tagId": 43149,
  },
  Object {
    "articleId": 29655,
    "id": 37083,
    "tagId": 3838,
  },
]
`;

exports[`utils/generateSeed should return signle data for array with items 1`] = `
Object {
  "id": 50444,
  "tag": Array [
    "South Dakota",
  ],
}
`;

exports[`utils/generateSeed should return single data for company name 1`] = `
Object {
  "name": "Wolff and Sons",
}
`;

exports[`utils/generateSeed should return single data for object with items 1`] = `
Object {
  "address": Object {
    "city": "Port Liza",
    "state": "South Carolina",
    "streetAddress": "202 Johns Stream",
  },
  "countryCode": "KP",
  "id": 28085,
}
`;

exports[`utils/generateSeed should return single seed data for fake book 1`] = `
Object {
  "authorId": 18129,
  "dateStr": "2000-02-22T08:50:18.260Z",
  "id": 78061,
  "price": "472.00",
  "slug": "quam-labore-voluptatum",
  "title": "blue Home Loan Account Bedfordshire",
}
`;

exports[`utils/generateSeed should return single seed data for fake user 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/uxalex/128.jpg",
  "email": "Hilbert_Rath@gmail.com",
  "id": 41704,
  "lastSignInAt": 1999-10-11T11:21:53.655Z,
  "locale": "zh_CN",
  "loggedInCount": 16436,
  "name": "松本 結愛",
  "userName": "Laury24",
}
`;

exports[`utils/generateSeed should return single seed data for fake user with today(1970/1/1) 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/uxalex/128.jpg",
  "email": "Hilbert_Rath@gmail.com",
  "id": 41704,
  "lastSignInAt": 1969-10-11T01:21:53.655Z,
  "locale": "zh_CN",
  "loggedInCount": 16436,
  "name": "Guadalupe Parker",
  "userName": "Laury24",
}
`;

exports[`utils/generateSeed should return single seed data for fake user without locale 1`] = `
Object {
  "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/uxalex/128.jpg",
  "email": "Hilbert_Rath@gmail.com",
  "id": 41704,
  "lastSignInAt": 1999-10-11T11:21:53.655Z,
  "locale": "zh_CN",
  "loggedInCount": 16436,
  "name": "Guadalupe Parker",
  "userName": "Laury24",
}
`;

exports[`utils/generateSeedWithRelation should return single seed data with relation 1`] = `
Object {
  "attachmentId": "28d15c5a-a70c-48e4-9772-bc910f421907",
  "channelId": 68264,
  "commentedById": 54551,
  "id": 57447,
  "text": "Ut amet molestiae aliquam numquam ad ut et. Et ut perspiciatis fugiat expedita fuga hic odio. Ducimus cumque aut harum in perferendis veritatis tempora aut. Facilis officia sed. Eum excepturi officia ipsum sunt voluptatem eius. Rerum qui doloremque ex velit porro animi odio saepe sunt.",
}
`;

exports[`utils/generateSeedWithRelation should return single seed data with relation as instance if asId = false 1`] = `
Object {
  "attachment": Object {
    "id": "28d15c5a-a70c-48e4-9772-bc910f421907",
    "imageUrl": "http://lorempixel.com/640/480/nature",
    "name": "one-to-one",
    "type": "embrace",
  },
  "channel": Object {
    "id": 68264,
    "name": "convergence Administrator Clothing",
  },
  "commentedBy": Object {
    "auth0Id": "4be76d72-37c6-4af4-9b6d-5cf3cb62d63a",
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/devankoshal/128.jpg",
    "id": 54551,
    "locale": "en_au_ocker",
    "nickname": "Juana5",
    "status": "New Israeli Sheqel",
  },
  "id": 57447,
  "text": "Ut amet molestiae aliquam numquam ad ut et. Et ut perspiciatis fugiat expedita fuga hic odio. Ducimus cumque aut harum in perferendis veritatis tempora aut. Facilis officia sed. Eum excepturi officia ipsum sunt voluptatem eius. Rerum qui doloremque ex velit porro animi odio saepe sunt.",
}
`;

exports[`utils/generateSeeds should return multiple seed data for fake 3 user 1`] = `
Array [
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/uxalex/128.jpg",
    "email": "Hilbert_Rath@gmail.com",
    "id": 41704,
    "lastSignInAt": 1999-10-11T11:21:53.655Z,
    "locale": "zh_CN",
    "loggedInCount": 16436,
    "name": "松本 結愛",
    "userName": "Laury24",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/ChrisFarina78/128.jpg",
    "email": "Lila_Bauch@hotmail.com",
    "id": 33681,
    "lastSignInAt": 1999-12-10T02:02:47.036Z,
    "locale": "en",
    "loggedInCount": 64062,
    "name": "山田 陽翔",
    "userName": "Hilma_Lesch",
  },
  Object {
    "avatar": "https://s3.amazonaws.com/uifaces/faces/twitter/arindam_/128.jpg",
    "email": "Sonny_Luettgen25@hotmail.com",
    "id": 86676,
    "lastSignInAt": 1999-12-29T05:55:54.455Z,
    "locale": "sk",
    "loggedInCount": 11531,
    "name": "林 陸斗",
    "userName": "Dax65",
  },
]
`;

exports[`utils/generateSeedsWithRelation should return multiple seed data with relation 1`] = `
Array [
  Object {
    "attachmentId": "28d15c5a-a70c-48e4-9772-bc910f421907",
    "channelId": 68264,
    "commentedById": 54551,
    "id": 57447,
    "text": "Ut amet molestiae aliquam numquam ad ut et. Et ut perspiciatis fugiat expedita fuga hic odio. Ducimus cumque aut harum in perferendis veritatis tempora aut. Facilis officia sed. Eum excepturi officia ipsum sunt voluptatem eius. Rerum qui doloremque ex velit porro animi odio saepe sunt.",
  },
  Object {
    "attachmentId": "abfbc020-04b2-4d70-a1ed-aa85e702e181",
    "channelId": 36069,
    "commentedById": 15599,
    "id": 33984,
    "text": "Id optio rem culpa minus. Nostrum aut et. Aliquam repellat est reprehenderit.",
  },
  Object {
    "attachmentId": "62fc4caf-224d-4658-949e-b68307f974d2",
    "channelId": 63669,
    "commentedById": 34490,
    "id": 46230,
    "text": "Facilis cupiditate quo nemo hic. Rem nesciunt aliquid aut qui architecto saepe enim laborum. Quia dolor consequuntur et dolorem tenetur totam nisi asperiores.",
  },
]
`;
